<resources>
    <string name="app_name">LaTableDesGourmands</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gerer_mes_tables">Gérer mes tables</string>
    <string name="creer_mon_menu">Créer mon Menu</string>
    <string name="creer_ma_table">Créer ma table</string>
    <string name="gerer_mes_menus">Gérer mes Menus</string>
    <string name="nombreDeCuisinier">Nombre de cuisiniers :</string>
    <string name="nextStep">Passer à l\'étape suivante</string>
    <string name="importMenu">Importer mon menu</string>
    <string name="createMenu">Créer mon menu</string>
    <string name="MaTable">Ma table des gourmands</string>
    <string name="ListeDesMenu">Liste des menus</string>
    <string name="rechercherTable">Rechercher une table</string>
    <string name="inscription">S\'inscrire</string>
    <string name="connexion">Se connecter</string>
    <string name="tdg">La table des gourmands</string>
    <string name="choixCuisinier">Je suis cuisinier</string>
    <string name="choixInvite">Je suis invité</string>
    <string name="choix">Choisir</string>
    <string name="validerTable">Valider la table</string>
    <string name="végé">Végé</string>
    <string name="tout">Tout</string>
    <string name="vegan">Vegan</string>
    <string name="sansGluten">Sans gluten</string>
    <string name="aucunTheme">Pas de thème</string>
    <string name="pirateTheme">Pirates</string>
    <string name="haloweenTheme">Haloween</string>
</resources>