<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".demarrageapplication.AcceuilApplication"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/nomAppli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/indie_flower"
            android:text="@string/tdg"
            android:textColor="@color/lightYellow"
            android:textSize="@dimen/bigSize"
            android:layout_gravity="center"
            android:layout_marginBottom="180dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/inscriptionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/classicButtonGreen"
                android:text="@string/inscription"
                android:onClick="onClickInscriptionButton" />

            <Button
                android:id="@+id/connectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/classicButtonGreen"
                android:text="@string/connexion"
                android:onClick="onClickConnexionButton" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>