<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cuisinier.creerMaTable.creerMaTableStep2"
    android:orientation="vertical"
    android:background="@drawable/background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <fragment
            android:id="@+id/fragment"
            android:name="com.example.latabledesgourmands.fragments.bandeauHaut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_bandeau_haut" />
        <TextView
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/creer_ma_table"
            android:textSize="@dimen/bigSize"
            android:gravity="center_horizontal"
            style="@style/classicButtonOrange"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/bigSize"
                android:text="@string/importMenu"
                android:onClick="onClickImportMenuButton"
                style="@style/classicButtonOrange"
                ></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/bigSize"
                android:text="@string/createMenu"
                android:onClick="onClickCreateMenuButton"
                style="@style/classicButtonOrange"
                ></Button>


        <fragment
            android:id="@+id/fragmentBas"
            android:name="com.example.latabledesgourmands.fragments.bandeauBasCreationTDG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_bandeau_bas_creation_t_d_g" />
    </LinearLayout>
</RelativeLayout>