<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cuisinier.creerMaTable.creerMaTable"
    android:orientation="vertical"
    android:background="@drawable/background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <fragment
        android:id="@+id/fragment"
        android:name="com.example.latabledesgourmands.fragments.bandeauHaut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_bandeau_haut" />
    <TextView
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/indie_flower"
        android:text="@string/creer_ma_table"
        android:textColor="@color/black"
        android:textSize="@dimen/bigSize"
        android:gravity="center_horizontal"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >
    <TextView
        android:id="@+id/nbCuisinierText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreDeCuisinier"
        android:background="@color/white"
        android:fontFamily="@font/indie_flower"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="@dimen/bigSize"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/buttonOneCookerTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button"
            android:fontFamily="@font/indie_flower"
            android:textColor="@color/black"
            android:textSize="@dimen/bigSize"
            android:layout_margin="5dp"
            android:onClick="onClickButtonOneCooker"
            android:text="1"></Button>
            <Button
                android:id="@+id/buttonTwoCookerTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/color_button"
                android:fontFamily="@font/indie_flower"
                android:textColor="@color/black"
                android:textSize="@dimen/bigSize"
                android:layout_margin="5dp"
                android:text="2"
                android:onClick="onClickButtonTwoCooker"
                ></Button>
            <Button
                android:id="@+id/buttonThreeCookerTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/color_button"
                android:fontFamily="@font/indie_flower"
                android:textColor="@color/black"
                android:textSize="@dimen/bigSize"
                android:layout_margin="5dp"
                android:text="3"
                android:onClick="onClickButtonThreeCooker"
                ></Button>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/indie_flower"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumSize"
            android:layout_margin="5dp"
            android:text="@string/nextStep"
            android:onClick="onClickNextStepButton"
            ></Button>
        <fragment
            android:id="@+id/fragmentBas"
            android:name="com.example.latabledesgourmands.fragments.bandeauBasCreationTDG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_bandeau_haut" />
    </LinearLayout>
</RelativeLayout>