<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".invite.rechercherUneTable.RechercherTableStep1"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <fragment
            android:id="@+id/fragment"
            android:name="com.example.latabledesgourmands.fragments.bandeauHaut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_bandeau_haut" />
        <TextView
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/indie_flower"
            android:text="@string/MaTable"
            android:textColor="@color/black"
            android:textSize="@dimen/bigSize"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/color_button"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize"
                    android:text="Date :"
                    android:onClick="onClickDataFilter"/>

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize"
                    android:text="jj-mm-aaaa"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/color_button"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="Heure :"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize" />

                <EditText
                    android:id="@+id/editTextTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize"
                    android:inputType="time"
                    android:text="hh : mm"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/color_button"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="adresse :"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize" />

                <EditText
                    android:id="@+id/editTextTextPostalAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize"
                    android:inputType="textPostalAddress"
                    android:text="41 rue jeanMich, Ville "
                    android:visibility="invisible"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="Nombre de convives :"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize" />

                <EditText
                    android:id="@+id/editTextNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/bigSize"
                    android:inputType="number"
                    android:visibility="invisible"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/color_button"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="Menu :"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="@string/tout"
                    android:textColor="@color/black"
                    android:textSize="10dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="@string/végé"
                    android:textColor="@color/black"
                    android:textSize="10dp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="@string/vegan"
                    android:textColor="@color/black"
                    android:textSize="10dp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="@string/sansGluten"
                    android:textColor="@color/black"
                    android:textSize="10dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/color_button"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="Prix : "
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize" />

                <EditText
                    android:id="@+id/editPrixText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize"
                    android:inputType="numberDecimal"
                    android:text="0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="à"
                    android:textColor="@color/white"
                    android:textSize="@dimen/mediumSize"/>


                <EditText
                    android:id="@+id/editPrixText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize"
                    android:inputType="numberDecimal"
                    android:text="30"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/color_button"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="Thème : "
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="@string/tout"
                    android:textColor="@color/black"
                    android:textSize="10dp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="@string/aucunTheme"
                    android:textColor="@color/black"
                    android:textSize="10dp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="@string/pirateTheme"
                    android:textColor="@color/black"
                    android:textSize="10dp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center_horizontal"
                    android:text="@string/haloweenTheme"
                    android:textColor="@color/black"
                    android:textSize="10dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize"
                    android:text="Fumeur" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize"
                    android:text="Animaux" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:fontFamily="@font/indie_flower"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumSize"
                    android:text="Alcool" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/rechercheTableButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/indie_flower"
            android:text="@string/rechercherTable"
            android:textColor="@color/black"
            android:onClick="onClickRechercherTableButton" />

    </LinearLayout>

</RelativeLayout>